--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --san-ramon-blue: #226e93;
+;
 }
 
 @theme inline {
@@ -12,15 +14,28 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Lato, sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  color: var(--san-ramon-blue);
+  font-size: 34pt;
+  font-weight: 300;
+  letter-spacing: 1px;
+  line-height: 1.2;
+  margin: 20px 0 20px 0;
+}
+
+footer, .links{
+  background: var(--san-ramon-blue);
+  color: var(--background);
+}
+
+section{
+  border-top: 1px solid var(--color-gray-300);;
+  width: 100%;
+  margin-top: 20px;
 }
